# rs-pixel

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: error.rs  lib.rs
src/response/: boosters_response.rs  counts_response.rs  friends_response.rs  guild_response.rs  key_response.rs  leaderboards_response.rs  mod.rs  player_response.rs  punishment_stats_response.rs  recent_games_response.rs  status_response.rs
src/response/skyblock/: mod.rs  skyblock_auction_response.rs  skyblock_auctions_ended_response.rs  skyblock_auctions_response.rs  skyblock_bazaar_response.rs  skyblock_bingo_response.rs  skyblock_ended_auctions_response.rs  skyblock_fire_sales_response.rs  skyblock_news_response.rs  skyblock_profile_response.rs  skyblock_profiles_response.rs
src/types/: game_type.rs  gamemode.rs  lobby_type.rs  mod.rs  server_type.rs
src/util/: constants.rs  error.rs  generic_json.rs  minecraft.rs  mod.rs  skills_struct.rs  skyblock_profile.rs  utils.rs
