[package]
name = "rs-pixel"
version = "0.1.1"
edition = "2021"
description = "A complete, rate-limiting, asynchronous Rust implementation of the Hypixel Public API with extensive SkyBlock support"
repository = "https://github.com/kr45732/rs-pixel"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
surf = { version = "2.3.2", features = ["curl-client"] }
serde_json = "1.0.87"
serde = { version = "1.0.146", features = ["derive"] }
lazy_static = "1.4.0"
hematite-nbt = "0.5.2"
base64 = "0.13.1"