[package]
name = "rs-pixel"
version = "0.2.0"
edition = "2021"
description = "A complete, rate-limiting, asynchronous Rust implementation of the Hypixel Public API with extensive SkyBlock support"
repository = "https://github.com/kr45732/rs-pixel"
readme = "README.md"
license = "MIT OR Apache-2.0"

[dependencies]
surf = { version = "2.3.2", features = ["curl-client"] }
serde_json = "1.0.97"
serde = { version = "1.0.164", features = ["derive"] }
lazy_static = "1.4.0"
hematite-nbt = "0.5.2"
base64 = "0.21.2"
moka = { version = "0.11.2", features = ["future"]}

[profile.release]
codegen-units = 1
debug = true
lto = true